--- a/day1_html_exercise.html
+++ b/day1_html_exercise.html
@@ -3,33 +3,54 @@
 <head>
     <title>
        Diving deep exercise
-    </title>    
+    </title>
+    
 </head>
 <body>
-<h1><a id ="heading"> Main heading</a></h1>
-<h2>Subheading 1</h2>
-    <p1><b> Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
-    Ut vitae nibh mi. Morbi vitae viverra diam. Integer sagittis sodales tincidunt. 
-    Cras fringilla eros eget est scelerisque, laoreet aliquet magna aliquam. 
-    Integer sodales purus quis dictum blandit. Etiam gravida tortor turpis, nec molestie orci facilisis eget. 
-    Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae;  
-    </p1><b>
-<h2>Subheading 2</h2>
-    <p2><i>Pellentesque vitae eleifend elit. Aliquam massa dolor, mattis nec vulputate vitae, cursus et ligula. 
-    Nullam in eros porttitor, consectetur nulla non, laoreet dui. Etiam et eros velit. 
-    Quisque consequat quam sed ipsum tristique finibus. Donec porta tempus lorem et fringilla. 
-    Sed pellentesque ultrices ex, ac aliquam erat auctor a. Aliquam sit amet magna ut nisl posuere maximus. 
-    Morbi in turpis bibendum, malesuada tortor eu, sollicitudin risus.
-    </i><p2>
+     <style>
+                h1{
+                    font-family: cursive;
+                    color: blue;
+                  {
+        </style>
 
-</br>
+            <style>
+                     h2{
+                        font-family: cursive;
+                        color: red;
+                       }
+            </style>
+
+                    <style>
+                            h3{
+                                font-family: cursive;
+                                color: purple;
+                               }
+                    </style>  
+    <script src="Alert.js"></script>
+  <h1><a id ="heading"> Main heading</a></h1>
+        <h2>Subheading 1</h2>
+            <p1><b> Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
+            Ut vitae nibh mi. Morbi vitae viverra diam. Integer sagittis sodales tincidunt. 
+            Cras fringilla eros eget est scelerisque, laoreet aliquet magna aliquam. 
+            Integer sodales purus quis dictum blandit. Etiam gravida tortor turpis, nec molestie orci facilisis eget. 
+            Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae;  
+            </p1><b>
+        <h3>Subheading 2</h3>
+            <p2><i>Pellentesque vitae eleifend elit. Aliquam massa dolor, mattis nec vulputate vitae, cursus et ligula. 
+            Nullam in eros porttitor, consectetur nulla non, laoreet dui. Etiam et eros velit. 
+            Quisque consequat quam sed ipsum tristique finibus. Donec porta tempus lorem et fringilla. 
+            Sed pellentesque ultrices ex, ac aliquam erat auctor a. Aliquam sit amet magna ut nisl posuere maximus. 
+            Morbi in turpis bibendum, malesuada tortor eu, sollicitudin risus.
+            </i><p2>
+
+        </br>
     <a href="#heading">heading</a>
 </br>
 
 <a href ="http://www.lifechoices.co.za">Life choices</a>
 
-
+<footer><img scr ="mm-300x220.jpg" width ="100" breadth="100">memento mori</img scr></footer>
 </body>
-
 
 </html>
