--- a/Day_exercise2.html
+++ b/Day_exercise2.html
@@ -24,7 +24,7 @@
       }
     </style>
 
-    <h1><b>Commonly kept house pets</b></h1>
+    <b>Commonly kept house pets</b>
     <ul>
       <li>Cats</li>
       <li>Dogs</li>
