--- a/day1_html_exercise.html
+++ b/day1_html_exercise.html
@@ -28,7 +28,7 @@
                                }
                     </style>  
     <script src="Alert.js"></script>
-  <h1><a id ="heading"> Main heading</a></h1>
+  <a id ="heading"> Main heading</a>
         <h2>Subheading 1</h2>
             <p1><b> Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
             Ut vitae nibh mi. Morbi vitae viverra diam. Integer sagittis sodales tincidunt. 
